@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Reduce CPU consumption when using nsock poll engine with no registered FD,
+  by actually calling Poll() for the time until timeout, instead of directly
+  returning zero and entering the loop again. [Henri Doreau]
+
 o Fix ICMP Echo (-PE) host discovery for IPv6, broken since 6.45, caused by
   failing to set the ICMP ID for outgoing packets which is used to match
   incoming responses. [Andrew Waters]
